examples/test/testpolicy9419.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9419
  namespace: namespace298
spec:
  podSelector:
    matchLabels:
      key40: value4
      key6: value25
      key42: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value33
      podSelector:
        matchLabels:
          key39: value14
          key3: value19
          key24: value2
